--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'org.jsoup:jsoup:1.16.2'
     testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
 }
